edit functionality added

--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
           <button id="submit-button">Add</button>
           <button id="cancel-button">Cancel</button>
         </div>
+
+        <!-- <div class="input-task">
+          <form class="form-adding-tasks">
+            <label for="taskName2">Edit your task:</label><br />
+            <input
+              type="text"
+              id="taskName2"
+              name="taskName2"
+              placeholder="New Task"
+            />
+          </form>
+          <button id="edit-button">Edit</button>
+          <button id="cancel-button2">Cancel</button>
+        </div> -->
       </main>
     </div>
 
