--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/d8c0c6c0f0.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>ToDo-List</title>
   </head>
   <body>
     <div class="app">
